# stardex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
assets/completions/: _stardex  stardex.bash  stardex.fish
assets/man/: stardex.1
src/: cli.rs  hash.rs  lib.rs  main.rs  output.rs  pax.rs  process.rs
tests/: benchmark.sh  integration_tests.rs
